<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_257"
        android:background="@color/toolbar_bg">
        <ImageView
            android:id="@+id/iv_login_avtar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_55"
            android:paddingTop="@dimen/dp_19"
            android:paddingBottom="@dimen/dp_13"
            android:layout_centerHorizontal="true"
            android:background="@drawable/avatar_bg"
            android:src="@mipmap/avatar"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_37"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_marginRight="@dimen/dp_18"
            android:paddingLeft="50dp"
            android:background="@drawable/login_middle_view"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_below="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@color/white">
        <EditText
            android:id="@+id/et_userName"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:paddingLeft="@dimen/dp_32"
            android:paddingTop="@dimen/dp_6"
            android:textCursorDrawable="@null"
            android:drawablePadding="@dimen/dp_13"
            android:drawableLeft="@mipmap/user"
            android:layout_marginLeft="@dimen/dp_18"
            android:textSize="15dp"
            android:layout_marginRight="@dimen/dp_18"
            android:inputType="textPersonName"
            android:theme="@style/MyEditText"
            android:hint="@string/enter_account" />
        <ImageButton
            android:visibility="gone"
            android:id="@+id/ib_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_46"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@mipmap/delete"/>
     </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_below="@+id/rl_user"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="62dp">

        <EditText
            android:id="@+id/et_passWord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@mipmap/password"
            android:ems="10"
            android:paddingLeft="@dimen/dp_32"
            android:textCursorDrawable="@null"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_marginRight="@dimen/dp_18"
            android:textSize="15dp"
            android:drawablePadding="@dimen/dp_13"
            android:hint="@string/enter_password"
            android:theme="@style/MyEditText"
            android:inputType="textPassword" />
        <ImageButton
            android:visibility="gone"
            android:id="@+id/ib_what"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_marginRight="@dimen/dp_46"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:background="@mipmap/what"/>
        </RelativeLayout>
    <TextView
        android:id="@+id/tv_login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_password"
        android:layout_marginTop="@dimen/dp_21"
        android:layout_centerHorizontal="true"
        android:textSize="12dp"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        android:text="@string/user_password_error"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_error"
        android:layout_marginTop="@dimen/dp_21"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/shap_round_bg_black"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/login" />
</RelativeLayout>